Controllers cleanup: one headless manager core, one Eclipse protocol, content assist following Frontend
Consolidates the former PRs #38 to #47 into one commit on top of main.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_017Wumue2WFysEPEw49DXtoy